@@ -1,5 +1,8 @@
 CHANGES IN FLTK 1.3.2
 
+	- Fixed Fl_Widget::copy_label() and Fl_Window::copy_label() when
+	  called with the old label() (STR #2836)
+
     1.3.2 ABI FEATURES
 	(To enable the following ABI features, put: #define FLTK_ABI_VERSION 10302
 	 at the top of your FL/Enumerations.H and rebuild FLTK and your app)
